# ee205_animal_farm_reference

./: .clang-tidy  .gitignore  CMakeLists.txt  CONTRIBUTE.md  DOXYGEN.md  README.md  RELEASE.md  STATISTICS.md  Statistics_dev.md  WEEKLY_PROGRESS.md  addCats.cpp  addCats.h  catDatabase.cpp  catDatabase.h  config.h  deleteCats.h  main.cpp  reportCats.cpp  reportCats.h  updateCats.cpp  updateCats.h
data/: catNames.txt  codeOverTime.csv  codeOverTime.sh  dogNames.txt
doxygen/: doxygen.conf
src/: Animal.cpp  Animal.h  Breed.h  Cat.cpp  Cat.h  Color.h  Container.cpp  Container.h  DoublyLinkedList.cpp  DoublyLinkedList.h  Gender.h  List.cpp  List.h  Mammal.cpp  Mammal.h  Node.cpp  Node.h  NodeWithPrev.cpp  NodeWithPrev.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Tree.cpp  Tree.h  Weight.cpp  Weight.h  addCats.cpp  addCats.h  catBegat.cpp  catDatabase.cpp  catDatabase.h  catFamilyTree.cpp  catGenerations.cpp  catList.cpp  catTail.cpp  config.h  deleteCats.cpp  deleteCats.h  hello.cpp  main.cpp  main_AnimalFarm.cpp  (+20 more)
src/Animal/: Animal.cpp  Animal.h  AnimalFactory.cpp  AnimalFactory.h  Cat.cpp  Cat.h  CatEmpire.cpp  CatEmpire.h  Mammal.cpp  Mammal.h
src/Animal/Bird/: Bird.cpp  Bird.h  Chicken.cpp  Chicken.h  Finch.cpp  Finch.h
src/Animal/Mammal/: Mammal.cpp  Mammal.h
src/Animal/Mammal/Cat/: Cat.cpp  Cat.h  CatContainer.h  CatEmpire.cpp  CatEmpire.h  CatPride.cpp  CatPride.h  CatQueue.h  CatStack.h  CatWrangler.h
src/Animal/Mammal/Dog/: Dog.cpp  Dog.h
src/Container/: Array.cpp  Array.h  BinarySearchTree.cpp  BinarySearchTree.h  Container.cpp  Container.h  DoublyLinkedList.cpp  DoublyLinkedList.h  DynamicArray.cpp  DynamicArray.h  List.cpp  List.h  Node.h  Queue.h  SinglyLinkedList.cpp  SinglyLinkedList.h  Stack.h  Tree.cpp  Tree.h
src/Utility/: Color.cpp  Color.h  Gender.cpp  Gender.h  Name.cpp  Name.h  QueueSimulator.cpp  QueueSimulator.h  Random.cpp  Random.h  Trim.cpp  Trim.h  Weight.cpp  Weight.h
tests/: .clang-tidy  CMakeLists.txt  INSTALLING_BOOST_TESTS.md  test_Animal.cpp  test_BinarySearchTree.cpp  test_Bird.cpp  test_Cat.cpp  test_CatPride.cpp  test_Container.cpp  test_DomainSpecificContainers.cpp  test_DoublyLinkedList.cpp  test_DynamicArray.cpp  test_Gender.cpp  test_Name.cpp  test_OptimusCat.cpp  test_Queue.cpp  test_Random.cpp  test_SinglyLinkedList.cpp  test_Tree.cpp  test_Trim.cpp  test_Weight.cpp
